Intento-Fallido xc

--- a/Index-encab.html
+++ b/Index-encab.html
@@ -24,11 +24,28 @@
            <!--Navegacion del encabezado-->
            <nav>
                 <ul>
-                    <li> <a href="#">¡Conócenos!</a></li>
-                    <li> <a href="#">¡Únete!</a></li>
-                    <li><a href="#">¡Inicia Sesión !</a></li>
+                    <li> <a href="#" for="radio1">¡Conócenos!</a></li>
+                    <li for="radio2"> <a href="#">¡Únete!</a></li>
+                     <li for="radio3"> <a href="#">¡Inicia Sesión !</a></li>
                 </ul>
            </nav>
+
+           <div class="contenedor">
+           <div class="tab1" id="radio1">
+            <h2>¡Conócenos!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quas?</p>
+            </div>  
+            <div class="tab2" id="radio2">
+                <h2>¡Únete!</h2>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quas?</p>
+            </div>
+            <div class="tab3" id="radio3">
+                <h2>¡Inicia Sesión!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quas?</p>
+            </div>
+        </div>
+
+           </div>
        </div>
    </header>
 </body>
