--- a/Index-encab.html
+++ b/Index-encab.html
@@ -24,29 +24,37 @@
            <!--Navegacion del encabezado-->
            <nav>
                 <ul>
-                    <li> <a href="#" for="radio1">¡Conócenos!</a></li>
-                    <li for="radio2"> <a href="#">¡Únete!</a></li>
-                     <li for="radio3"> <a href="#">¡Inicia Sesión !</a></li>
+                    <li> <a href="#">¡Conócenos!</a></li>
+                    <li> <a href="#">¡Únete!</a></li>
+                     <li> <a href="#">¡Inicia Sesión !</a></li>
                 </ul>
            </nav>
-
-           <div class="contenedor">
-           <div class="tab1" id="radio1">
-            <h2>¡Conócenos!</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quas?</p>
-            </div>  
-            <div class="tab2" id="radio2">
-                <h2>¡Únete!</h2>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quas?</p>
-            </div>
-            <div class="tab3" id="radio3">
-                <h2>¡Inicia Sesión!</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, quas?</p>
-            </div>
-        </div>
-
            </div>
-       </div>
    </header>
+   <main>
+    <div class="contenido">
+        <div class="barra-proy">
+             Ejemplo de proyecto
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eum!</p>
+             <img src="log.jpg" >
+        </div>
+        <div class="etiquetas">
+             <div class="E1">
+                <p>Etiqueta 1</p>
+                <p>"Colores de ejemplo"</p>
+             </div>
+             <div class="E2">
+                <p>Etiqueta 2</p>
+                <p>"Colores de ejemplo"</p>
+             </div>
+             <div class="E3">
+                <p>Etiqueta 3</p>
+                <p>"Colores de ejemplo"</p>
+             </div>
+        </div>
+    </div>
+   </main>
+   <footer class="footer">Este es el footer
+   </footer>
 </body>
 </html>
