--- a/Index-encab.html
+++ b/Index-encab.html
@@ -18,7 +18,7 @@
        <div class="ancho">
            <!--Logo pagina-->
            <div class="logo">
-               <img src="img/Logo02.png" alt="logo">
+               <img src="img/slog.png" alt="logo">
                <p>Nombre pagina o si o si</p>
            </div>
            <!--Navegacion del encabezado-->
@@ -36,7 +36,7 @@
         <div class="barra-proy">
              Ejemplo de proyecto
              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eum!</p>
-             <img src="img/Logo02.png">
+             <img src="img/slog.png">
         </div>
         <div class="etiquetas">
              <div class="E1">
