--- a/Index-encab.html
+++ b/Index-encab.html
@@ -9,7 +9,8 @@
     <!--Css-->
     <link rel="stylesheet" href="Estilos.css">
     <!--Fuente-->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,600&display=swap" rel="stylesheet">
+    <!--java-->
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     
 </head>
