--- a/Index-encab.html
+++ b/Index-encab.html
@@ -49,7 +49,7 @@
             <div class="imagenp"><img src="img/H2.jpg"></div>
             <div class="imagen1">
             <div class="nombrep">Nombre de proyecto 1</div>
-            <div class="descripcionp"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda nihil, sed voluptatibus, quis asperiores sint, dolor fugiat corporis deleniti vero tenetur voluptate neque. Voluptatum consectetur sapiente blanditiis cumque inventore nihil placeat. Maiores distinctio quia harum, nemo repellat quam optio illo.
+            <div class="descripcionp"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda libero nostrum sunt quod voluptatibus eum illum temporibus incidunt in quaerat, voluptatum iusto consequuntur optio perferendis aperiam sint aut quisquam quasi placeat aspernatur ea aliquam! Necessitatibus, quae porro? Quia, aspernatur debitis.
             </p></div> 
              </a></div> </section>
 
