--- a/isesion.html
+++ b/isesion.html
@@ -26,9 +26,25 @@
                 <form action="">
                     <div class="form-group text-center">
                         <h1 class="text-light">Inicia Sesión</h1>
+                    </div> 
+                    <div class="form-group mx-sm-4 pt-3">
+                        <input type="text" class="form-control" placeholder="Usuario">
                     </div>
-                    <div class="form-group">
-                        <input type="text" name="control-forma" placeholder="Usuario">
+                    <div class="form-group mx-sm-4 ">
+                        <input type="text" class="form-control" placeholder="Contraseña">
+                    </div>
+                    <div class="form-group mx-sm-3">
+                        <input type="submit" class="btn btn-block ingresar" value="INGRESAR">
+                    </div>
+                    <hr>
+                    <div class="text-light text-center">
+                        ¿Aún no te has registrado?
+                    </div>
+                    <div class="form-group mx-sm-3">
+                        <input type="submit" class="btn btn-block registrar" value="REGISTRARME">
+                    </div>
+                    <div class="form-group mz-sm-4 text-right">
+                        <span class=""><a href="#" class="olvide">Olvide mi constraseña</a></span>
                     </div>
                 </form>        
             </div>
