--- a/isesion.html
+++ b/isesion.html
@@ -23,16 +23,21 @@
     <div class="container">
         <div class="row justify-content-center pt-5 mt-5 mr-1">
             <div class="col-md-4 formulario">
+                
+                <div class="inicio-Sesion">
                 <form action="">
                     <div class="form-group text-center">
                         <h1 class="text-light">Inicia Sesión</h1>
                     </div> 
+                    <!--Usuario-->
                     <div class="form-group mx-sm-4 pt-3">
                         <input type="text" class="form-control" placeholder="Usuario">
                     </div>
+                    <!--Contraseña-->
                     <div class="form-group mx-sm-4 ">
-                        <input type="text" class="form-control" placeholder="Contraseña">
+                        <input type="password" class="form-control" placeholder="Contraseña">
                     </div>
+                    <!--Ingresar-->
                     <div class="form-group mx-sm-3">
                         <input type="submit" class="btn btn-block ingresar" value="INGRESAR">
                     </div>
@@ -40,19 +45,55 @@
                     <div class="text-light text-center">
                         ¿Aún no te has registrado?
                     </div>
+                    <!--Registrarme-->
                     <div class="form-group mx-sm-3">
                         <input type="submit" class="btn btn-block registrar" value="REGISTRARME">
                     </div>
                     <div class="form-group mz-sm-4 text-right">
-                        <span class=""><a href="#" class="olvide">Olvide mi constraseña</a></span>
+                        <span class=""><a href="#" class="olvide">Olvide mi contraseña</a></span>
                     </div>
-                </form>        
+                </form> </div>
+
+                <div class="registroo">
+                    <form action="">
+                        <div class="form-group text-center">
+                            <h1 class="text-light">¡Registrate!</h1>
+                        </div> 
+                        <!--Nombre-Completo-->
+                        <div class="form-group mx-sm-4 ">
+                            <input type="text" class="form-control" placeholder="Nombre">
+                        </div>
+                         <!--Correo Electronico-->
+                         <div class="form-group mx-sm-4 ">
+                            <input type="text" class="form-control" placeholder="Correo Electrónico">
+                        </div>
+                         <!--Usuario-->
+                         <div class="form-group mx-sm-4">
+                            <input type="text" class="form-control" placeholder="Usuario">
+                        </div>
+                         <!--Contraseña-->
+                         <div class="form-group mx-sm-4 ">
+                            <input type="password" class="form-control" placeholder="Contraseña">
+                        </div>
+                         <!--Registrarme-->
+                         <div class="form-group mx-sm-5">
+                            <input type="submit" class="btn btn-block registrar" value="REGISTRARME">
+                        </div>
+                        <hr>
+                        <div class="text-light text-center">
+                            ¿Ya tienes una cuenta?
+                        </div>
+                         <!--Ingresar-->
+                         <div class="form-group mx-sm-3 pt-2">
+                            <input type="submit" class="btn btn-block ingresar" value="INGRESAR">
+                        </div>
+                    </form>
+                </div>
+
             </div>
         </div>
      </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
-</html>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/boots
