--- a/isesion.html
+++ b/isesion.html
@@ -24,8 +24,8 @@
         <div class="row justify-content-center pt-5 mt-5 mr-1">
             <div class="col-md-4 formulario">
                 
-                <div class="inicio-Sesion">
-                <form action="">
+                <div >
+                <form action="" class="inicio-sesion">
                     <div class="form-group text-center">
                         <h1 class="text-light">Inicia Sesión</h1>
                     </div> 
@@ -47,15 +47,15 @@
                     </div>
                     <!--Registrarme-->
                     <div class="form-group mx-sm-3">
-                        <input type="submit" class="btn btn-block registrar" value="REGISTRARME">
+                        <input type="submit" class="btn registrar btn-block" value="REGISTRARME" id="btn-registro">
                     </div>
                     <div class="form-group mz-sm-4 text-right">
                         <span class=""><a href="#" class="olvide">Olvide mi contraseña</a></span>
                     </div>
                 </form> </div>
 
-                <div class="registroo">
-                    <form action="">
+                <div>
+                    <form action="" class="registroo">
                         <div class="form-group text-center">
                             <h1 class="text-light">¡Registrate!</h1>
                         </div> 
@@ -93,7 +93,10 @@
             </div>
         </div>
      </div>
-
+    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/boots
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/boots"></script>
+     <script src="java2.js"></script>
+    </body>
+</html>
