--- a/isesion.html
+++ b/isesion.html
@@ -46,50 +46,15 @@
                         ¿Aún no te has registrado?
                     </div>
                     <!--Registrarme-->
+                    
                     <div class="form-group mx-sm-3">
-                        <input type="submit" class="btn registrar btn-block" value="REGISTRARME" id="btn-registro">
-                    </div>
+                        <a href="Registro.html"></a><input type="submit" class="btn btn-block registrar" value="REGISTRARME" id="btn-registro">
+                    </div></a>
+                    
                     <div class="form-group mz-sm-4 text-right">
                         <span class=""><a href="#" class="olvide">Olvide mi contraseña</a></span>
                     </div>
                 </form> </div>
-
-                <div>
-                    <form action="" class="registroo">
-                        <div class="form-group text-center">
-                            <h1 class="text-light">¡Registrate!</h1>
-                        </div> 
-                        <!--Nombre-Completo-->
-                        <div class="form-group mx-sm-4 ">
-                            <input type="text" class="form-control" placeholder="Nombre">
-                        </div>
-                         <!--Correo Electronico-->
-                         <div class="form-group mx-sm-4 ">
-                            <input type="text" class="form-control" placeholder="Correo Electrónico">
-                        </div>
-                         <!--Usuario-->
-                         <div class="form-group mx-sm-4">
-                            <input type="text" class="form-control" placeholder="Usuario">
-                        </div>
-                         <!--Contraseña-->
-                         <div class="form-group mx-sm-4 ">
-                            <input type="password" class="form-control" placeholder="Contraseña">
-                        </div>
-                         <!--Registrarme-->
-                         <div class="form-group mx-sm-5">
-                            <input type="submit" class="btn btn-block registrar" value="REGISTRARME">
-                        </div>
-                        <hr>
-                        <div class="text-light text-center">
-                            ¿Ya tienes una cuenta?
-                        </div>
-                         <!--Ingresar-->
-                         <div class="form-group mx-sm-3 pt-2">
-                            <input type="submit" class="btn btn-block ingresar" value="INGRESAR">
-                        </div>
-                    </form>
-                </div>
-
             </div>
         </div>
      </div>
@@ -97,6 +62,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/boots"></script>
-     <script src="java2.js"></script>
     </body>
 </html>
