--- a/isesion.html
+++ b/isesion.html
@@ -48,8 +48,10 @@
                     <!--Registrarme-->
                     
                     <div class="form-group mx-sm-3">
-                        <a href="Registro.html"></a><input type="submit" class="btn btn-block registrar" value="REGISTRARME" id="btn-registro">
-                    </div></a>
+                        <a href="Registro.html"><div class="registrar"  id="btn-registro">registrarme
+                        </a>
+                        </div>
+                    </div>
                     
                     <div class="form-group mz-sm-4 text-right">
                         <span class=""><a href="#" class="olvide">Olvide mi contraseña</a></span>
