--- a/Registro.html
+++ b/Registro.html
@@ -46,16 +46,16 @@
                             <input type="password" class="form-control" placeholder="Contraseña">
                         </div>
                          <!--Registrarme-->
-                         <div class="form-group mx-sm-5">
-                            <input type="submit" class="btn btn-block registrar" value="REGISTRARME">
+                         <div class="form-group mx-sm-3">
+                            <a href="Index-encab.html" class="btn btn-block registrar" value="REGISTRARME">REGISTRARME</a>
                         </div>
                         <hr>
                         <div class="text-light text-center">
                             ¿Ya tienes una cuenta?
                         </div>
                          <!--Ingresar-->
-                         <div class="form-group mx-sm-3 pt-2">
-                            <input type="submit" class="btn btn-block ingresar" value="INGRESAR">
+                         <div class="form-group mx-sm-4">
+                            <a href="isesion.html" class="btn btn-block ingresar" value="INGRESAR">¡INICIA SESIÓN!</a>
                         </div>
                     </form>
                 </div>
