Avance, hay que meterle nitro

--- a/Index-encab.html
+++ b/Index-encab.html
@@ -64,7 +64,7 @@
                                 <img src="img/H1.jpg" class="img-responsive" alt="" style="height:350px;width:100%;">
                                 <div class="carousel-caption">
                                     <section>
-                                        <a href="https://www.youtube.com/watch?v=R5cbxTPZNL0">
+                                        <a href="Eejmploooooo.html">
                                         <div class="imagenp"><img src="img/H2.jpg "></div>
                                         <div class="nombrep">Proyecto 1</div>
                                         <div class="descripcionp"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae commodi delectus, sit tenetur aut modi nam doloribus fugiat dolor esse!
