--- a/Eejmploooooo.html
+++ b/Eejmploooooo.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div class="contenedor">
-            <h1 class="gg">IZ-MAT</h1>
+            <h1 class="gg">Frente Unido</h1>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar">
             </label>
