--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu comunidad</title>
+    <title>Frente Unido</title>
     <!--bootstrap 5-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!-- Font Awesome -->
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div class="contenedor">
-            <h1 class="gg">Nombre Pag</h1>
+            <h1 class="gg">Frente Unido</h1>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar">
             </label>
