--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,7 @@
                 <div class="carousel-caption enlace">
                     <a href="Eejmploooooo.html" class="d-block">
                     <h3>Iz-Mat</h3>
-                    <img src="img/Fondomate2.jpg" alt="">
+                    <img src="img/iz-sin-nom.jpg" alt="">
                     <p class="lead d-none d-sm-block">Buscamos ayudar a niñ@s a desarrollar habilidades matemáticas</p></a>
                 </div>
               </div>
