--- a/Eejmploooooo.html
+++ b/Eejmploooooo.html
@@ -51,7 +51,7 @@
                 </article> 
 
                 <aside class="col-md-6 mt-5 col-xs-12 pl-5 imagen ">
-                    <img src="img/Fondomate2.jpg" >
+                    <img src="img/iz-mat.jpg" >
                 </aside>
             </section>
 
