--- a/Eejmploooooo.html
+++ b/Eejmploooooo.html
@@ -28,16 +28,14 @@
 <body>
     <header>
         <div class="contenedor">
-            <h1 class="gg">Frente Unido</h1>
+            <h1 class="gg"><a href="Index.html">Frente Unido</a></h1>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar">
             </label>
             <nav class="menu">
-                <div class="inicio">
-                <a href="Index.html">Pagina Principal</a></div>
-                <a href="" class="nav-link"><span class="primero"><i class="icon-chat"></i></span>¡Conócenos!</a>
+                <a href="conocenos.html" class="nav-link"><span class="primero"><i class="icon-chat"></i></span>¡Conócenos!</a>
                 <a href="Unete.html" class="nav-link"><span class="segundo"><i class="icon-user-plus"></i></span>¡Únete!</a>
-                <a href="Index.html" class="nav-link"><span class="tercero"><i class="icon-doc-text-inv"></i></span>Página Principal</a>
+                <a href="Index.html" class="nav-link"><span class="tercero"><i class="icon-doc-text-inv"></i></span>Pagina Principal</a>
             </nav>
         </div>
     </header>
