--- a/Index.html
+++ b/Index.html
@@ -28,14 +28,13 @@
 <body>
     <header>
         <div class="contenedor">
-            <h1 class="gg">Frente Unido</h1>
+            <h1 class="gg"><a href="Index.html">Frente Unido</a></h1>
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar">
             </label>
             <nav class="menu">
-                <div class="inicio">
-                <a href="Index-encab.html">Inicio</a></div>
-                <a href="" class="nav-link"><span class="primero"><i class="icon-chat"></i></span>¡Conócenos!</a>
+                
+                <a href="conocenos.html" class="nav-link"><span class="primero"><i class="icon-chat"></i></span>¡Conócenos!</a>
                 <a href="Unete.html" class="nav-link"><span class="segundo"><i class="icon-user-plus"></i></span>¡Únete!</a>
                
             </nav>
@@ -53,7 +52,7 @@
             </ol>
             <div class="carousel-inner imagenes">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="img/H1.jpg" alt="First slide">
+                <img class="d-block w-100" src="img/AX.jpg" alt="First slide">
                 <div class="carousel-caption enlace">
                     <a href="Eejmploooooo.html" class="d-block">
                     <h3>Iz-Mat</h3>
@@ -62,7 +61,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/H2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="img/AX.jpg" alt="Second slide">
                 <div class="carousel-caption enlace">
                     <a href="#" class="d-block"><h3>Proyecto2</h3>
                     <img src="img/H3.jpg" alt="">
@@ -70,7 +69,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/H3.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/AX.jpg" alt="Third slide">
                 <div class="carousel-caption enlace">
                     <a href="#" class="d-block"><h3>Proyecto3</h3>
                     <img src="img/H1.jpg" alt="">
@@ -78,7 +77,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/H1.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/AX.jpg" alt="Third slide">
                 <div class="carousel-caption enlace">
                     <a href="#" class="d-block"><h3>Proyecto4</h3>
                     <img src="img/H1.jpg" alt="">
@@ -86,7 +85,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/H2.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/AX.jpg" alt="Third slide">
                 <div class="carousel-caption enlace">
                     <a href="#" class="d-block"><h3>Proyecto5</h3>
                     <img src="img/H1.jpg" alt="">
