--- a/PP.html
+++ b/PP.html
@@ -40,7 +40,7 @@
         </div>
     </header>
 
-    <div class="row card-deck m-5 pt-5">
+    <div class="row card-deck alto mx-5 pt-5">
   
         <div class="card col-md-4 col-sm-12 col-xs-12">
           <img class="card-img-top w-100" height="350px" style="border-radius: 0 0 20px 0;" src="img/iz-sin-nom.jpg" alt="Card image cap">
@@ -148,7 +148,7 @@
     <div class="opa">
         <div class="ola">
             
-                <div class="row py-5 d-flex align-items-center mt-5">
+                <div class=" py-5 d-flex align-items-center mt-5">
                 <div class="col-md-12 text-center">
                     <div class="redes">
                     <ul>
