--- a/Unete.html
+++ b/Unete.html
@@ -69,7 +69,7 @@
                 <!--Nota-->
                 <div class="notaa">
                 <h2 class="text-center">En nombre de la comunidad de Frente Unido:</h2>
-                <p class="text-justify">Esperemos que tu y todos los integrantes que conforman el próximo gran proyecto se sientan a gusto de trabajar con nosotros, les aseguramos que no se arrepentiran de la desición que han tomado, sientete en la confianza de reportar cualquier inconveniente, pues nos empeñaremos en resolverlo lo antes posible. ¡Gracias a ti haremos que nuestra comunidad crezca y de esta forma lleguemos a más personas!:)</p>
+                <p class="text-justify lapera">Esperemos que tu y todos los integrantes que conforman el próximo gran proyecto se sientan a gusto de trabajar con nosotros, les aseguramos que no se arrepentiran de la desición que han tomado, sientete en la confianza de reportar cualquier inconveniente, pues nos empeñaremos en resolverlo lo antes posible. ¡Gracias a ti haremos que nuestra comunidad crezca y de esta forma lleguemos a más personas!:)</p>
             </div>
         </div>
         </div>
